--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,8 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "^4.19.2",
+    "luxon": "^3.4.4",
+    "mongoose": "^8.3.4",
     "morgan": "~1.9.1"
   },
   "devDependencies": {
