--- a/backend/package.json
+++ b/backend/package.json
@@ -14,9 +14,13 @@
     "express": "^4.19.2",
     "express-async-handler": "^1.2.0",
     "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.2",
     "luxon": "^3.4.4",
     "mongoose": "^8.3.4",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "passport": "^0.7.0",
+    "passport-json": "^1.2.0",
+    "passport-jwt": "^4.0.1"
   },
   "devDependencies": {
     "eslint": "^8.57.0",
