Implement post create page and HTML encoding, purification, and decoding
 - Implemented a page for users to create posts using tinymce API
 - Implemented he library to decode HTML on the front end
 - Implemented jsdom and dompurify libraries to purify HTML on the front
   and back ends

--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@ DEV_DB_STRING='mongodb://localhost:27017/blog_app'
 JWT_SECRET='secret'
 
 VITE_BLOG_API_URL=http://localhost:3000/api
+
+VITE_TINYMCE_KEY=32no1helpm6yhhfu1428klpko9ej5eayiurbjf3ip2bg7bxe
