--- a/clientEditor/package.json
+++ b/clientEditor/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
+    "@tinymce/tinymce-react": "^5.0.1",
+    "dompurify": "^3.1.3",
+    "he": "^1.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.4",
