--- a/.env
+++ b/.env
@@ -5,5 +5,7 @@ DEV_DB_STRING='mongodb://localhost:27017/blog_app'
 JWT_SECRET='secret'
 
 VITE_BLOG_API_URL=http://localhost:3000/api
+VITE_BLOGS_VIEW_PAGE=''
+VITE_BLOGS_EDIT_PAGE=''
 
 VITE_TINYMCE_KEY=32no1helpm6yhhfu1428klpko9ej5eayiurbjf3ip2bg7bxe
