--- a/clientViewer/package.json
+++ b/clientViewer/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
+    "dompurify": "^3.1.3",
+    "he": "^1.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.4",
@@ -18,6 +20,7 @@
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@types/he": "^1.2.3",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
